test/core/errors/offsets_error/zs/numbits_error.zs
package numbits_error;


struct NumBitsError
{
    uint8 value;
numbits(value):
    string field;
};
